# statsign

./: .gitignore  README.md
firmware/: platformio.ini
firmware/src/: main.cpp
firmware/statsign_579/: EPD.cpp  EPD.h  EPD_Init.cpp  EPD_Init.h  ble_sign.cpp  ble_sign.h  pic_home.h  push_test.py  sign_protocol.h  spi.cpp  statsign_579.ino
server/: README.md  app.py  assets.py  auth.py  ble_client.py  config.py  presets.py  pyproject.toml  render.py  run_server.py  schedule.py
server/assets/icons/: README.md
server/data/: presets.json  schedule.json
server/templates/: index.html  presets.html  schedule.html
