[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statsign-server"
version = "0.1.0"
description = "Local web + BLE controller for Statsign"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "pillow",
  "bleak",
]

[tool.setuptools]
py-modules = ["app", "ble_client", "config", "render", "run_server"]
include-package-data = false
