[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statsign-server"
version = "0.1.0"
description = "Local web + BLE controller for Statsign"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "pillow",
  "bleak",
  "tzdata",
]

[tool.setuptools]
py-modules = ["app", "assets", "ble_client", "config", "presets", "render", "run_server", "schedule"]
include-package-data = false
